<resources>
    <string name="app_name">DriverApplication</string>
    <string name="have_an_account">Have an account?</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="please_signup_to_continue_our_app">Please signup to continue using our app</string>
    <string name="please_login_to_continue_our_app">Please login to continue using our app</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title">Title</string>
    <string name="driving_license_no">Driving License No.</string>
    <string name="issued_date">Issued Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="state">State</string>
    <string name="submit">Submit</string>
</resources>
