<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@mipmap/logo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            style="@style/tv_text_dark_20"
            android:text="@string/signup" />

        <TextView
            style="@style/tv_text_hint_15"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/please_signup_to_continue_our_app" />

        <View
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_3"
            android:layout_marginTop="@dimen/dp_4"
            android:background="@drawable/yellow_back" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_2"
            app:cardElevation="@dimen/dp_1"
            app:cardMaxElevation="@dimen/dp_3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/custom_font"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/text_dark"
                    android:textColorHint="@color/text_hint"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="match_parent"
                        android:background="@color/divider" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:padding="@dimen/dp_12"
                        android:src="@mipmap/lock" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_2"
            app:cardElevation="@dimen/dp_1"
            app:cardMaxElevation="@dimen/dp_3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/custom_font"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="12dp"
                    android:textColor="@color/text_dark"
                    android:textColorHint="@color/text_hint"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="match_parent"
                        android:background="@color/divider" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:padding="@dimen/dp_12"
                        android:src="@mipmap/keypad" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_2"
            app:cardElevation="@dimen/dp_1"
            app:cardMaxElevation="@dimen/dp_3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/custom_font"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/text_dark"
                    android:textColorHint="@color/text_hint"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="match_parent"
                        android:background="@color/divider" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:padding="@dimen/dp_12"
                        android:src="@mipmap/email" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/green_back"
            android:fontFamily="@font/custom_font"
            android:text="@string/sign_up_caps"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:padding="@dimen/dp_10">

            <TextView
                style="@style/tv_text_hint_15"
                android:text="@string/have_an_account" />

            <TextView
                style="@style/tv_text_dark_15"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginLeft="@dimen/dp_4"
                android:text="@string/signin"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>