<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    tools:context=".activities.UploadLicenceActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">

                <ImageView
                    android:id="@+id/iv_doc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@mipmap/uploaddoc" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/dp_2"
                    app:cardElevation="@dimen/dp_1"
                    app:cardMaxElevation="@dimen/dp_3"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <EditText
                        android:id="@+id/ed_licence_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/custom_font"
                        android:hint="@string/driving_license_no"
                        android:padding="12dp"
                        android:textColor="@color/text_dark"
                        android:textColorHint="@color/text_hint"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/sp_14" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/dp_2"
                        app:cardElevation="@dimen/dp_1"
                        app:cardMaxElevation="@dimen/dp_3"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <EditText
                            android:id="@+id/ed_issue_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/custom_font"
                            android:hint="@string/issued_date"
                            android:padding="12dp"
                            android:textColor="@color/text_dark"
                            android:textColorHint="@color/text_hint"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/sp_14" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/dp_2"
                        app:cardElevation="@dimen/dp_1"
                        app:cardMaxElevation="@dimen/dp_3"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <EditText
                            android:id="@+id/ed_expiry_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/custom_font"
                            android:hint="@string/expiry_date"
                            android:padding="12dp"
                            android:textColor="@color/text_dark"
                            android:textColorHint="@color/text_hint"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/sp_14" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/dp_2"
                    app:cardElevation="@dimen/dp_1"
                    app:cardMaxElevation="@dimen/dp_3"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <EditText
                        android:id="@+id/ed_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/custom_font"
                        android:hint="@string/state"
                        android:padding="12dp"
                        android:textColor="@color/text_dark"
                        android:textColorHint="@color/text_hint"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/sp_14" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_20"
                    android:background="@drawable/blue_back"
                    android:fontFamily="@font/custom_font"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>